// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't reprint stop message: CI 1`] = `
"[33m-[39m #stop
[33m-[39m #stop
[33m-[39m #stop
[33m-[39m #stop
"
`;

exports[`doesn't reprint stop message: Local 1`] = `
"[?25l[1G[33m⠋[39m #stop[?25l[1G[2K[1G[33m⠙[39m #stop[?25l[1G[2K[1G[33m⠹[39m #stop[1G[2K[1G[33m⠸[39m #stop
[?25h"
`;

exports[`marks spinner as stop with mark: CI 1`] = `
"[33m-[39m #stop
[33m-[39m #stop
[33m-[39m #stop
V #stop
"
`;

exports[`marks spinner as stop with mark: Local 1`] = `
"[?25l[1G[33m⠋[39m #stop[?25l[1G[2K[1G[33m⠙[39m #stop[?25l[1G[2K[1G[33m⠹[39m #stop[1G[2K[1GV #stop
[?25h"
`;

exports[`stops after 2 spins and prints stop message: CI 1`] = `
"[33m-[39m #stop
[33m-[39m #stop
[33m-[39m Done!
"
`;

exports[`stops after 2 spins and prints stop message: Local 1`] = `
"[?25l[1G[33m⠋[39m #stop[?25l[1G[2K[1G[33m⠙[39m #stop[1G[2K[1G[33m⠹[39m Done!
[?25h"
`;
